--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -27,6 +27,9 @@
 \forestset{
 boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 }
+\forestset{
+boompje/.style={for tree={s sep=8mm, inner sep=0, l=0}}
+}
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows,positioning,shapes.geometric}
 
